--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,24 +1,171 @@
+/* body,
 html {
-  box-sizing: border-box;
+  height: 100%;
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
-  color: #fff;
-  -webkit-font-smoothing: antialiased;
 }
-body {
+
+* {
   margin: 0;
   padding: 0;
+  border: 0;
+  transition: all 0.3s ease-in-out;
 }
-/* Main */
-.main {
+
+*:focus {
+  outline: none;
+}
+
+a:link {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+nav {
+  width: 100%;
+  min-height: 40px;
+  overflow: hidden;
+  position: fixed;
+  padding: 20px;
+  top: 0;
+  z-index: 2;
+  background: rgba(1, 22, 39, 0.8);
+}
+nav .searchForm {
+  min-width: 80%;
+  float: left;
+}
+nav .searchForm input {
+  min-width: 60%;
+  padding: 10px;
+  font-size: 18px;
+  margin: 0 auto;
+  background: #fdfffc;
+  border-radius: 3px;
+}
+nav .searchForm button {
+  min-width: 10%;
+  padding: 10px;
+  font-size: 18px;
+  background: #fdfffc;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+nav .searchForm button:hover {
+  background-color: #2ec4b6;
+  cursor: pointer;
+}
+nav .searchForm button:hover span {
+  color: white;
+  margin-left: 10px;
+}
+nav .time {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fdfffc;
+  float: left;
+  padding: 10px;
+}
+
+.gallery {
+  min-width: 100%;
+  min-height: 100%;
+}
+.gallery .overlay {
+  background: rgba(1, 22, 39, 0.8);
   width: 100%;
   height: 100vh;
-  background: #0061d5;
+  position: fixed;
 }
-/* Main title */
-.main h1 {
+.gallery .overlay img {
+  width: 100px;
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.gallery ul {
+  background: rgba(1, 22, 39, 0.8);
+  min-width: 100%;
+  min-height: 100vh;
+}
+.gallery ul li {
+  max-width: 100%;
+  min-height: 100%;
+  margin: 0 auto;
+  list-style-type: none;
+}
+.gallery ul li .bg-photos {
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+}
+.gallery .alert-no-results {
+  font-size: 26px;
+  text-align: center;
+  color: white;
+  position: absolute;
+  width: 100%;
+  top: 40%;
+} */
+
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #f5f5f5;
+  margin: 0 auto;
+  max-width: 60em;
+  line-height: 1.3;
+}
+ul,
+li {
   margin: 0;
   padding: 0;
-  text-align: center;
-  font-size: 44px;
+  list-style: none;
+}
+img {
+  width: 100%;
+}
+h2 {
+  margin-top: 0;
+  margin-bottom: 0.4em;
+}
+.gallery ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery ul li {
+  display: flex;
+  padding: 0.5em;
+  width: 100%;
+  height: 300px;
+}
+@media all and (min-width: 40em) {
+  .gallery ul li {
+    width: 50%;
+  }
+}
+@media all and (min-width: 60em) {
+  .gallery ul li {
+    width: 33.33%;
+  }
+}
+.gallery ul li .bg-photos {
+  background-color: #fff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  width: 100%;
 }
