--- a/src/css/main.css
+++ b/src/css/main.css
@@ -119,6 +119,10 @@ nav .time {
 * {
   box-sizing: border-box;
 }
+html {
+  height: 100%;
+  font-family: "Montserrat", sans-serif;
+}
 body {
   background-color: #f5f5f5;
   margin: 0 auto;
@@ -168,4 +172,13 @@ h2 {
   flex-direction: column;
   padding: 1em;
   width: 100%;
+}
+
+.gallery .alert-no-results {
+  font-size: 26px;
+  text-align: center;
+  color: white;
+  position: absolute;
+  width: 100%;
+  top: 40%;
 }
