--- a/src/css/main.css
+++ b/src/css/main.css
@@ -142,6 +142,31 @@ h2 {
   margin-top: 0;
   margin-bottom: 0.4em;
 }
+
+.gallery {
+  min-width: 100%;
+  min-height: 100%;
+}
+.gallery .load {
+  position: relative;
+}
+.gallery .overlay {
+  background: rgba(1, 22, 39, 0.1);
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.gallery .overlay img {
+  width: 100px;
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .gallery ul {
   display: flex;
   flex-wrap: wrap;
